# deepbrowser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/deepbrowser/: exceptions.py  test.py
src/deepbrowser/agent/: builder.py  middleware.py  prompts.py  state.py  tools.py
src/deepbrowser/browser/: __init__.py  base.py
src/deepbrowser/browser/cdp/: browser.py  page.py  types.py
src/deepbrowser/tagging/: elements.py  shapes.py  tagify.py  tags.py
src/deepbrowser/utils/: __init__.py  image_processing.py  langchain.py  logging.py
src/deepbrowser/utils/cdp/: __init__.py  winkeycodes.py
